--- a/.github/workflows/playwrightDemo-test.yml
+++ b/.github/workflows/playwrightDemo-test.yml
@@ -12,13 +12,14 @@ jobs:
     steps:
       # 1️⃣ Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
+      # 2️⃣ Setup Node.js (Latest LTS)
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
       # 3️⃣ Install dependencies
       - name: Install dependencies
@@ -32,9 +33,10 @@ jobs:
       - name: Run tests
         run: npx playwright test --reporter=html
 
-      # 6️⃣ Upload HTML report as artifact
+      # 6️⃣ Upload HTML report (even if tests fail)
       - name: Upload HTML report
-        uses: actions/upload-artifact@v3
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
